# mikpoly

./: CMakeLists.txt  README.md  mikpoly.cuh  test_mikpoly.cu
